load images in background

--- a/app/src/main/res/layout/view_list_item.xml
+++ b/app/src/main/res/layout/view_list_item.xml
@@ -4,9 +4,10 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:scaleType="centerCrop"
         android:id="@+id/ivItem"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="120dp">
     </ImageView>
 
 </FrameLayout>
