--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -7,15 +7,18 @@
     <ListView
         android:id="@+id/lvItems"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="80dp" />
 
     <ImageView
         android:id="@+id/ivParent"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp"
         android:layout_marginTop="16dp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/bg_dark_circle"
         android:padding="12dp"
         android:src="@drawable/ic_arrow_upward_white_24dp" />
 
