--- a/app/src/main/res/layout/view_list_item.xml
+++ b/app/src/main/res/layout/view_list_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<org.byters.gallery.view.ui.view.FrameLayoutSquare xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="2dp">
 
     <ImageView
-        android:scaleType="centerCrop"
         android:id="@+id/ivItem"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
-    </ImageView>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
-</FrameLayout>
+</org.byters.gallery.view.ui.view.FrameLayoutSquare>
