--- a/app/src/main/res/layout/view_image_settings.xml
+++ b/app/src/main/res/layout/view_image_settings.xml
@@ -31,6 +31,12 @@
         android:text="@string/action_crop" />
 
     <TextView
+        android:id="@+id/tvEdit"
+        style="@style/menu_image_item"
+        android:drawableStart="@drawable/ic_edit_white_24dp"
+        android:text="@string/action_edit" />
+
+    <TextView
         android:id="@+id/tvDelete"
         style="@style/menu_image_item"
         android:drawableStart="@drawable/ic_delete_white_24dp"
