--- a/app/src/main/res/layout/view_image_settings.xml
+++ b/app/src/main/res/layout/view_image_settings.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/llSettings"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@drawable/bg_dark_round"
     android:orientation="vertical"
-    android:padding="24dp"
-    android:visibility="gone"
-    tools:showIn="@layout/fragment_image"
-    tools:visibility="visible">
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/tvRotate"
