--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="dialog_transparent" parent="android:Theme.Dialog">
+        <item name="android:background">@null</item>
+    </style>
+
 </resources>
