--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,10 +4,18 @@
 
     android:layout_height="match_parent">
 
-    <org.byters.gallery.view.ui.view.imageViewZoom.CropIwaImageView
+    <ImageView
         android:id="@+id/ivItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ImageView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_gravity="center"
+        android:background="@drawable/bg_dark_circle"
+        android:padding="12dp"
+        android:src="@drawable/ic_play_white_24dp" />
 
     <include layout="@layout/view_item_base" />
 
